Actions
Bug #11938
closedloader.efi: HARDDRIVE_DEVICE_PATH may have subpaths
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
The macos does create Vendor Media devices on top of APFS container (like partition table inside the partition), so we need to collect such devices into respective device tree.
Testing done: build/install/boot. verified the lsdev -v does show the expected output.
Files
Related issues
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 93d2b6f25d9da54278148dfd3d9a33ff2827016e
commit 93d2b6f25d9da54278148dfd3d9a33ff2827016e Author: Toomas Soome <tsoome@me.com> Date: 2019-11-25T17:13:48.000Z 11938 loader.efi: HARDDRIVE_DEVICE_PATH may have subpaths Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Updated by Toomas Soome over 2 years ago
- Related to Bug #12018: loader.efi: efipart needs better support detecting nested partitions added
Actions