11938 loader.efi: HARDDRIVE_DEVICE_PATH may have subpaths Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>